Updated h2h to match pm3.1, changed boomer shit, added vintik's tank attack control plugin

--- a/cfg/h2h/confogl_plugins.cfg
+++ b/cfg/h2h/confogl_plugins.cfg
@@ -1,6 +1,6 @@
 // Head to Head 1.0
 // A fun AI-removing competitive config for L4D2.
-// BASED ON PROMOD 3.0 by CircleSquared
+// BASED ON PROMOD 3.1 by CircleSquared
 // License CC BY-SA 3.0
 // Licensing info @ http://creativecommons.org/licenses/by-sa/3.0/
 
@@ -30,37 +30,35 @@ sm plugins load optional/l4d_equalise_alarm_cars.smx
 sm plugins load optional/l4d_inaudible_ghosts.smx
 sm plugins load optional/l4d_jockey_ledgehang.smx
 sm plugins load optional/l4d_no_cans.smx
+sm plugins load optional/l4d_si_slowdown.smx
 sm plugins load optional/l4d_tank_control.smx
 sm plugins load optional/l4d_tank_damage_announce.smx
 sm plugins load optional/l4d_tank_props.smx
+sm plugins load optional/l4d_tankpunchstuckfix.smx
 sm plugins load optional/l4d_thirdpersonshoulderblock.smx
 sm plugins load optional/l4d_weapon_limits.smx
 sm plugins load optional/l4d2_blind_infected.smx
-sm plugins load optional/l4d2_block_heatseeking_charger.smx
 sm plugins load optional/l4d2_getupfix.smx
 sm plugins load optional/l4d2_godframes_control.smx
 sm plugins load optional/l4d2_hittable_control.smx
-sm plugins load optional/l4d2_jockeyglitchfix.smx
-sm plugins load optional/l4d2_no_slowdown.smx
 sm plugins load optional/l4d2_nobhaps.smx
 sm plugins load optional/l4d2_noelevatorspit.smx
 sm plugins load optional/l4d2_nospitterduringtank.smx
 sm plugins load optional/l4d2_si_ffblock.smx
 sm plugins load optional/l4d2_spec_stays_spec.smx
+sm plugins load optional/l4d2_tank_attack_control.smx
 sm plugins load optional/l4d2_uncommon_blocker.smx
 sm plugins load optional/l4d2_unsilent_jockey.smx
 sm plugins load optional/l4d2_weaponrules.smx
-sm plugins load optional/l4d2pillgiver.smx
 sm plugins load optional/l4dhots.smx
-sm plugins load optional/lerptracker.smx
-sm plugins load optional/metafogl.smx
+sm plugins load optional/lerpmonitor.smx
 sm plugins load optional/nosaferoomkits.smx
+sm plugins load optional/starting_items.smx
 sm plugins load optional/survivor_mvp.smx
-sm plugins load optional/tank_punch_control.smx
 sm plugins load optional/temphealthfix.smx
 
 //Head to Head plugins
-sm plugins load optional/onlyboomercommons.smx
+sm plugins load optional/boomer_mobs.smx
 sm plugins load optional/aitankgank.smx
 sm plugins load optional/l4d_extended_tank_control.smx
 sm plugins load optional/damage_bonus.smx
