--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -1,6 +1,6 @@
 // Head to Head 1.0
 // A fun AI-removing competitive config for L4D2.
-// BASED ON PROMOD 3.0 by CircleSquared
+// BASED ON PROMOD 3.1 by CircleSquared
 // License CC BY-SA 3.0
 // Licensing info @ http://creativecommons.org/licenses/by-sa/3.0/
 
@@ -25,14 +25,15 @@ exec confogl_rates.cfg
 l4d_ready_enabled "1"
 l4d_ready_minimum_players "8"
 l4d_ready_search_key_disable "0" // 1 (default) = Automatically disable plugin if sv_search_key is blank, 0 = ignore value of sv_search_key
-l4d_ready_competition "0" // 0 (default) = all plugins are loaded, 1 = disable all plugins but the competition ones
-l4d_ready_pause_allowed "3"
+l4d_ready_pause_allowed "5"
 l4d_ready_pause_duration "120"
-l4d_ready_connect_enabled "1" // enable/disable connect announcements (useful during pauses)
-l4d_ready_cfg_name "Head to Head 0.2" // allows cfg creators to display an indication of what config and version the server is running
-confogl_addcvar l4d_ready_both_halves "1"
-confogl_addcvar l4d_ready_server_cfg "" // specify the cfg to execute after the map changes, used to overwrite server.cfg for competitive configs (default: "")
-confogl_addcvar l4d_ready_disable_spawns "0" // Prevent SI from having ghost-mode spawns during readyup.
+l4d_ready_connect_enabled "1"
+l4d_ready_cfg_name "Head to Head 1.0"
+l4d_ready_both_halves "1"
+l4d_ready_server_cfg "" 
+l4d_ready_disable_spawns "0"
+l4d_ready_both_halves "1" 
+l4d_block_pickup_pauses  "1"
 
 // Config Cvars
 confogl_match_allowvoting "1" // Sets whether players can vote/request for match mode
@@ -85,8 +86,6 @@ confogl_addcvar confogl_pipebomb_limit "0" // Limits the number of pipe bombs on
 confogl_addcvar confogl_molotov_limit "0" // Limits the number of molotovs on each map outside of saferooms. -1: no limit; >=0: limit to cvar value
 confogl_addcvar confogl_vomitjar_limit "0" // Limits the number of bile bombs on each map outside of saferooms. -1: no limit; >=0: limit to cvar value
 
-confogl_addcvar confogl_SM_enable "0" // Enable the health bonus style scoring
-
 // Balancing Cvars
 confogl_addcvar director_vs_convert_pills 0
 confogl_addcvar director_convert_pills 0
@@ -99,21 +98,27 @@ confogl_addcvar sv_infected_ceda_vomitjar_probability 0
 confogl_addcvar sv_force_time_of_day 0
 
 // Other Cvars
-confogl_addcvar survivor_max_incapacitated_count 2
-confogl_addcvar survivor_revive_duration 3.5
-confogl_addcvar z_ghost_delay_min 9
-confogl_addcvar z_ghost_delay_max 9
+confogl_addcvar z_ghost_delay_min 11
+confogl_addcvar z_ghost_delay_max 11
 confogl_addcvar z_mob_spawn_min_size 25
 confogl_addcvar z_mob_spawn_max_size 25
 confogl_addcvar z_mob_spawn_min_interval_normal 4096
 confogl_addcvar z_mob_spawn_max_interval_normal 4096
 confogl_addcvar ammo_shotgun_max 80
 confogl_addcvar ammo_smg_max 650
+confogl_addcvar z_pushaway_force 0 
 confogl_addcvar z_gun_swing_vs_min_penalty 0
 confogl_addcvar z_leap_interval_post_incap 15
 confogl_addcvar z_jockey_control_variance 0.15
 confogl_addcvar gascan_spit_time 2
-confogl_addcvar z_vomit_interval 22
+confogl_addcvar z_vomit_interval 15
+confogl_addcvar survivor_it_duration 10
+confogl_addcvar z_ghost_duration 3
+confogl_addcvar z_ghost_delay_minspawn 0
+confogl_addcvar z_exploding_shove_min 4
+confogl_addcvar z_exploding_shove_max 4
+confogl_addcvar survivor_max_incapacitated_count 2
+confogl_addcvar survivor_revive_duration 3.5
 
 // Tank/Witch Cvars
 confogl_addcvar versus_tank_chance 1
@@ -125,8 +130,6 @@ confogl_addcvar versus_witch_chance_finale 0
 confogl_addcvar versus_witch_chance_intro 0
 confogl_addcvar versus_boss_flow_max 0.9
 confogl_addcvar versus_boss_flow_max_intro 0.9
-confogl_addcvar versus_boss_flow_min 0.15
-confogl_addcvar versus_boss_flow_min_intro 0.15
 confogl_addcvar tank_stuck_time_suicide 4096
 confogl_addcvar director_tank_lottery_selection_time 3
 confogl_addcvar z_frustration_spawn_delay 35
