--- a/cfg/h2h/headtohead.cfg
+++ b/cfg/h2h/headtohead.cfg
@@ -1,6 +1,6 @@
-// Head to Head 0.1
+// Head to Head 1.0
 // A fun AI-removing competitive config for L4D2.
-// BASED ON PROMOD 3.0 by CircleSquared
+// BASED ON PROMOD 3.1 by CircleSquared
 // License CC BY-SA 3.0
 // Licensing info @ http://creativecommons.org/licenses/by-sa/3.0/
 
@@ -12,18 +12,29 @@ confogl_addcvar l4d_obey_boss_spawn_except_static 1
 confogl_addcvar l4d_no_bash_kills 1
 
 // [l4d_boss_percent.smx]
+confogl_addcvar l4d_global_percent 1
 confogl_addcvar l4d_tank_percent 1
-confogl_addcvar l4d_witch_percent 1
+confogl_addcvar l4d_witch_percent 0
 
 // [l4d_equalise_alarm_cars.smx]
 confogl_addcvar l4d_equalise_alarm_cars 1
 
-// [l4d_extended_tank_control.smx]
-confogl_addcvar tc_los_range 1024
-confogl_addcvar tc_los_range_delay 1.5
+// [l4d_jockey_ledgehang.smx]
+confogl_addcvar z_leap_interval_post_ledge_hang 10
+
+// [l4d_si_slowdown.smx]
+confogl_addcvar l4d_si_slowdown 1
+confogl_addcvar l4d_si_slowdown_tank 0
 
 // [l4d_tank_damage_announce.smx]
 confogl_addcvar l4d_tankdamage_enabled 1
+
+// [l4d_tank_props.smx]
+confogl_addcvar l4d_tank_props 1
+
+// [l4d_tankpunchstuckfix.smx]
+confogl_addcvar sm_punchstuckfix_enabled 1
+confogl_addcvar sm_punchstuckfix_unstucktime 1.0
 
 // [l4d_weapon_limits.smx]
 l4d_wlimits_add 3 1 weapon_smg weapon_smg_silenced
@@ -45,14 +56,18 @@ confogl_addcvar gfc_spit_zc_flags 6
 
 // [l4d2_hittable_control.smx]
 confogl_addcvar hc_bridge_car_damage 25.0
-confogl_addcvar hc_log_standing_damage 100.0
+confogl_addcvar hc_sflog_standing_damage 100.0
+confogl_addcvar hc_bhlog_standing_damage 100.0
+confogl_addcvar hc_handtruck_standing_damage 8.0
 confogl_addcvar hc_car_standing_damage 100.0
 confogl_addcvar hc_bumpercar_standing_damage 100.0
+confogl_addcvar hc_forklift_standing_damage 100.0
 confogl_addcvar hc_dumpster_standing_damage 100.0
 confogl_addcvar hc_haybale_standing_damage 100.0
 confogl_addcvar hc_baggage_standing_damage 100.0
 confogl_addcvar hc_incap_standard_damage 100.0
 confogl_addcvar hc_disable_self_damage 1
+confogl_addcvar hc_overhit_time 1.2
 
 // [l4d2_nobhaps.smx]
 confogl_addcvar simple_antibhop_enable 1
@@ -63,8 +78,17 @@ confogl_addcvar bhop_except_si_flags 63
 confogl_addcvar l4d2_block_infected_ff 1
 confogl_addcvar l4d2_infected_ff_allow_tank 1
 
+// [l4d2_tank_attack_control.smx]
+confogl_addcvar l4d2_allowed_tank_punches 2
+
 // [l4d2_uncommon_blocker.smx]
+confogl_addcvar sm_uncinfblock_enabled 1
 confogl_addcvar sm_uncinfblock_types 27
+
+// [l4d2_unsilent_jockey.smx]
+confogl_addcvar sm_unsilentjockey_enabled 1
+confogl_addcvar sm_unsilentjockey_always 1
+confogl_addcvar sm_unsilentjockey_time 0.1
 
 // [l4d2_weaponrules.smx]
 l4d2_addweaponrule smg_mp5 smg_silenced
@@ -80,27 +104,44 @@ l4d2_addweaponrule sniper_awp hunting_rifle
 
 // [l4dhots.smx]
 confogl_addcvar l4d_pills_hot 1
+confogl_addcvar l4d_pills_hot_interval 0.2
+confogl_addcvar l4d_pills_hot_increment 2
+confogl_addcvar l4d_pills_hot_total 50
 confogl_addcvar l4d_adrenaline_hot 1
+confogl_addcvar l4d_adrenaline_hot_interval 0.2
+confogl_addcvar l4d_adrenaline_hot_increment 2
+confogl_addcvar l4d_adrenaline_hot_total 25
 
-// [lerptracker.smx]
+// [lerpmonitor.smx]
+confogl_addcvar sm_allowed_lerp_changes 10
 confogl_addcvar sm_announce_lerp 1
 confogl_addcvar sm_log_lerp 1
 confogl_addcvar sm_fixlerp 1
 confogl_addcvar sm_max_interp 0.1
 
-// [metafogl.smx]
-confogl_addcvar metafogl_enable 1
+// [starting_items.smx]
+confogl_addcvar starting_item_flags 4
 
 // [survivor_mvp.smx]
+confogl_addcvar sm_survivor_mvp_enabled 1
+confogl_addcvar sm_survivor_mvp_counttank 0
+confogl_addcvar sm_survivor_mvp_countwitch 0
+confogl_addcvar sm_survivor_mvp_showff 0
 confogl_addcvar sm_survivor_mvp_brevity 4
 
-// [tank_punch_control.smx]
-sm_allowed_tank_punches 3
-
 // [damage_bonus.smx]
-confogl_addcvar sm_static_bonus  0
-confogl_addcvar sm_max_damage    800
-confogl_addcvar sm_damage_multi  1.0
+confogl_addcvar sm_static_bonus    0
+confogl_addcvar sm_max_damage      800
+confogl_addcvar sm_damage_multi    1.0
+confogl_addcvar sm_damage_mapmulti 1.0
+
+// [l4d_extended_tank_control.smx]
+confogl_addcvar tc_los_range 1024
+confogl_addcvar tc_los_range_delay 1.5
+
+// [boomer_mobs.smx]
+confogl_addcvar boomer_mobs_amount_mult	1.0
+confogl_addcvar boomer_mobs_only	1
 
 // Confogl Additional
 confogl_setcvars
