--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -85,6 +85,7 @@ confogl_addcvar confogl_adrenaline_limit "0" // Limits the number of adrenaline 
 confogl_addcvar confogl_pipebomb_limit "0" // Limits the number of pipe bombs on each map outside of saferooms. -1: no limit; >=0: limit to cvar value
 confogl_addcvar confogl_molotov_limit "0" // Limits the number of molotovs on each map outside of saferooms. -1: no limit; >=0: limit to cvar value
 confogl_addcvar confogl_vomitjar_limit "0" // Limits the number of bile bombs on each map outside of saferooms. -1: no limit; >=0: limit to cvar value
+confogl_addcvar confogl_SM_enable "0"
 
 // Balancing Cvars
 confogl_addcvar director_vs_convert_pills 0
