--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -120,6 +120,7 @@ confogl_addcvar z_exploding_shove_min 4
 confogl_addcvar z_exploding_shove_max 4
 confogl_addcvar survivor_max_incapacitated_count 2
 confogl_addcvar survivor_revive_duration 3.5
+confogl_addcvar z_throttle_hit_interval_normal 0.2
 
 // Tank/Witch Cvars
 confogl_addcvar versus_tank_chance 1
