Wonder if this will do anything

--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -136,6 +136,7 @@ confogl_addcvar tank_stuck_time_suicide 4096
 confogl_addcvar director_tank_lottery_selection_time 3
 confogl_addcvar z_frustration_spawn_delay 35
 confogl_addcvar z_frustration_lifetime 15
+confogl_Addcvar director_tank_lottery_selection_time 1
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/cfgogl/promod/stripper
