--- a/cfg/h2h/headtohead.cfg
+++ b/cfg/h2h/headtohead.cfg
@@ -1,6 +1,6 @@
 // Head to Head 1.0.1
 // A fun AI-removing competitive config for L4D2.
-// BASED ON PROMOD 3.1 by CircleSquared
+// BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
 // Licensing info @ http://creativecommons.org/licenses/by-sa/3.0/
 
@@ -102,12 +102,6 @@ l4d2_addweaponrule sniper_military hunting_rifle
 l4d2_addweaponrule sniper_scout hunting_rifle
 l4d2_addweaponrule sniper_awp hunting_rifle
 
-// [l4dhots.smx]
-confogl_addcvar l4d_pills_hot 1
-confogl_addcvar l4d_pills_hot_interval 0.2
-confogl_addcvar l4d_pills_hot_increment 2
-confogl_addcvar l4d_pills_hot_total 50
-
 // [lerpmonitor.smx]
 confogl_addcvar sm_allowed_lerp_changes 10
 confogl_addcvar sm_announce_lerp 1
@@ -116,7 +110,7 @@ confogl_addcvar sm_fixlerp 1
 confogl_addcvar sm_max_interp 0.1
 
 // [starting_items.smx]
-confogl_addcvar starting_item_flags 4
+confogl_addcvar starting_item_flags 5
 
 // [survivor_mvp.smx]
 confogl_addcvar sm_survivor_mvp_enabled 1
@@ -132,11 +126,13 @@ confogl_addcvar sm_damage_multi    1.0
 confogl_addcvar sm_damage_mapmulti 1.0
 
 // [l4d_extended_tank_control.smx]
-confogl_addcvar tc_los_range 1300
+confogl_addcvar tc_los_enable 0
+confogl_addcvar tc_los_range 2500
 confogl_addcvar tc_los_range_delay 1.0
+confogl_addcvar tc_tankcvars	1
 
 // [boomer_mobs.smx]
-confogl_addcvar boomer_mobs_amount_mult	0.8
+confogl_addcvar boomer_mobs_amount_mult	0.75
 confogl_addcvar boomer_mobs_only	1
 
 // Confogl Additional
