--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -1,6 +1,6 @@
-// Head to Head 1.0.1
+// Head to Head 1.0.3
 // A fun AI-removing competitive config for L4D2.
-// BASED ON PROMOD 3.1 by CircleSquared
+// BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
 // Licensing info @ http://creativecommons.org/licenses/by-sa/3.0/
 
@@ -28,7 +28,7 @@ l4d_ready_search_key_disable "0" // 1 (default) = Automatically disable plugin i
 l4d_ready_pause_allowed "5"
 l4d_ready_pause_duration "120"
 l4d_ready_connect_enabled "1"
-l4d_ready_cfg_name "Head to Head 1.0"
+l4d_ready_cfg_name "Head to Head 1.0.2"
 l4d_ready_both_halves "1"
 l4d_ready_server_cfg "" 
 l4d_ready_disable_spawns "0"
@@ -107,20 +107,18 @@ confogl_addcvar z_mob_spawn_min_interval_normal 4096
 confogl_addcvar z_mob_spawn_max_interval_normal 4096
 confogl_addcvar ammo_shotgun_max 80
 confogl_addcvar ammo_smg_max 650
-confogl_addcvar z_pushaway_force 0 
+confogl_addcvar z_pushaway_force 0
 confogl_addcvar z_gun_swing_vs_min_penalty 0
 confogl_addcvar z_leap_interval_post_incap 15
 confogl_addcvar z_jockey_control_variance 0.15
 confogl_addcvar gascan_spit_time 2
 confogl_addcvar z_vomit_interval 15
 confogl_addcvar survivor_it_duration 14
-confogl_addcvar z_ghost_duration 0
-confogl_addcvar z_ghost_delay_minspawn 0
 confogl_addcvar z_exploding_shove_min 4
 confogl_addcvar z_exploding_shove_max 4
 confogl_addcvar survivor_max_incapacitated_count 2
-confogl_addcvar survivor_revive_duration 3.5
-confogl_addcvar z_throttle_hit_interval_normal 0.25
+confogl_addcvar survivor_revive_duration 3
+confogl_addcvar first_aid_kit_use_duration 3
 
 // Tank/Witch Cvars
 confogl_addcvar versus_tank_chance 1
@@ -134,8 +132,7 @@ confogl_addcvar versus_boss_flow_max 0.9
 confogl_addcvar versus_boss_flow_max_intro 0.9
 confogl_addcvar tank_stuck_time_suicide 4096
 confogl_addcvar director_tank_lottery_selection_time 3
-confogl_addcvar z_frustration_spawn_delay 50
-confogl_addcvar z_frustration_lifetime 18
+confogl_addcvar z_frustration_spawn_delay 25
 confogl_addcvar director_tank_lottery_selection_time 1
 
 // Stripper Path
