--- a/cfg/h2h/confogl_plugins.cfg
+++ b/cfg/h2h/confogl_plugins.cfg
@@ -1,6 +1,6 @@
 // Head to Head 1.0.1
 // A fun AI-removing competitive config for L4D2.
-// BASED ON PROMOD 3.1 by CircleSquared
+// BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
 // Licensing info @ http://creativecommons.org/licenses/by-sa/3.0/
 
@@ -20,39 +20,44 @@ sm plugins load adminmenu.smx
 sm plugins load optional/l4d2lib.smx
 
 // Pro Mod Plugins
+sm plugins load optional/blockheatseekingchargers.smx
 sm plugins load optional/blocktrolls.smx
 sm plugins load optional/bossspawningfix.smx
 sm plugins load optional/botpopstop.smx
+sm plugins load optional/coinflip.smx
 sm plugins load optional/finalefix.smx
+sm plugins load optional/infected_flow_warp.smx
 sm plugins load optional/l4d_bash_kills.smx
 sm plugins load optional/l4d_boss_percent.smx
 sm plugins load optional/l4d_equalise_alarm_cars.smx
 sm plugins load optional/l4d_inaudible_ghosts.smx
 sm plugins load optional/l4d_jockey_ledgehang.smx
 sm plugins load optional/l4d_no_cans.smx
+sm plugins load optional/l4d_pounceprotect.smx
 sm plugins load optional/l4d_si_slowdown.smx
 sm plugins load optional/l4d_tank_control.smx
 sm plugins load optional/l4d_tank_damage_announce.smx
 sm plugins load optional/l4d_tank_props.smx
-sm plugins load optional/l4d_tankpunchstuckfix.smx
 sm plugins load optional/l4d_thirdpersonshoulderblock.smx
 sm plugins load optional/l4d_weapon_limits.smx
 sm plugins load optional/l4d2_blind_infected.smx
-sm plugins load optional/l4d2_director_commonlimit_block.smx
 sm plugins load optional/l4d2_getupfix.smx
 sm plugins load optional/l4d2_godframes_control.smx
 sm plugins load optional/l4d2_hittable_control.smx
 sm plugins load optional/l4d2_nobhaps.smx
 sm plugins load optional/l4d2_noelevatorspit.smx
 sm plugins load optional/l4d2_nospitterduringtank.smx
+sm plugins load optional/l4d2_scoremod.smx
+sm plugins load optional/l4d2_setscores.smx
 sm plugins load optional/l4d2_si_ffblock.smx
 sm plugins load optional/l4d2_spec_stays_spec.smx
-sm plugins load optional/l4d2_tank_attack_control.smx
+sm plugins load optional/l4d2_startercommon.smx
 sm plugins load optional/l4d2_uncommon_blocker.smx
 sm plugins load optional/l4d2_unsilent_jockey.smx
 sm plugins load optional/l4d2_weaponrules.smx
 sm plugins load optional/l4dhots.smx
 sm plugins load optional/lerpmonitor.smx
+sm plugins load optional/logger-plugin.smx
 sm plugins load optional/nosaferoomkits.smx
 sm plugins load optional/starting_items.smx
 sm plugins load optional/survivor_mvp.smx
