--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -135,6 +135,8 @@ confogl_addcvar director_tank_lottery_selection_time 3
 confogl_addcvar z_frustration_spawn_delay 25
 confogl_addcvar director_tank_lottery_selection_time 1
 
+confogl_addcvar host_timescale 1.12
+
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/cfgogl/promod/stripper
 
