h2h update to 1.0.4a test version

--- a/cfg/h2h/confogl.cfg
+++ b/cfg/h2h/confogl.cfg
@@ -1,4 +1,4 @@
-// Head to Head 1.0.3
+// Head to Head 1.0.4a
 // A fun AI-removing competitive config for L4D2.
 // BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
@@ -28,7 +28,7 @@ l4d_ready_search_key_disable "0" // 1 (default) = Automatically disable plugin i
 l4d_ready_pause_allowed "5"
 l4d_ready_pause_duration "120"
 l4d_ready_connect_enabled "1"
-l4d_ready_cfg_name "Head to Head 1.0.3"
+l4d_ready_cfg_name "Head to Head 1.0.4a"
 l4d_ready_both_halves "1"
 l4d_ready_server_cfg "" 
 l4d_ready_disable_spawns "0"
@@ -139,6 +139,9 @@ confogl_addcvar host_timescale 1.12
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/cfgogl/promod/stripper
+
+// No tracking since it gets constantly switched - also forced to 0 by boomer_mob (on version 0.1)
+sm_cvar z_common_limit 0
 
 // Plugin Cvars
 exec cfgogl/h2h/headtohead.cfg
