--- a/cfg/h2h/confogl_plugins.cfg
+++ b/cfg/h2h/confogl_plugins.cfg
@@ -1,4 +1,4 @@
-// Head to Head 1.0.1
+// Head to Head 1.0.4a
 // A fun AI-removing competitive config for L4D2.
 // BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
@@ -69,6 +69,7 @@ sm plugins load optional/boomer_mobs.smx
 sm plugins load optional/damage_bonus.smx
 sm plugins load optional/l4d_extended_tank_control.smx
 sm plugins load optional/l4d2_standardised_spawns.smx
+sm plugins load optional/melee_control.smx
 
 // Confogl
 sm plugins load l4dready.smx
