--- a/cfg/h2h/headtohead.cfg
+++ b/cfg/h2h/headtohead.cfg
@@ -1,4 +1,4 @@
-// Head to Head 1.0.1
+// Head to Head 1.0.4a
 // A fun AI-removing competitive config for L4D2.
 // BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
@@ -126,9 +126,9 @@ confogl_addcvar sm_damage_multi    1.0
 confogl_addcvar sm_damage_mapmulti 1.0
 
 // [l4d_extended_tank_control.smx]
-confogl_addcvar tc_los_enable 0
-confogl_addcvar tc_los_range 2500
-confogl_addcvar tc_los_range_delay 1.0
+confogl_addcvar tc_los_enable	0
+//confogl_addcvar tc_los_range 2500
+//confogl_addcvar tc_los_range_delay 1.0
 confogl_addcvar tc_tankcvars	1
 
 // [boomer_mobs.smx]
