--- a/cfg/h2h/confogl_off.cfg
+++ b/cfg/h2h/confogl_off.cfg
@@ -1,4 +1,4 @@
-// Head to Head 1.0.1
+// Head to Head 1.0.4a
 // A fun AI-removing competitive config for L4D2.
 // BASED ON PROMOD by CircleSquared
 // License CC BY-SA 3.0
@@ -6,6 +6,9 @@
 
 // Disable ReadyUp
 l4d_ready_enabled 0
+
+//Since some plugins mess with the limit and it's not tracked by confogl
+sm_cvar z_common_limit 30
 
 // Unlock Plugins and reload defaults
 confogl_resetclientcvars
