More presets! and some corrections

--- a/cfg/cmt/easy.cfg
+++ b/cfg/cmt/easy.cfg
@@ -1,21 +1,21 @@
-sm_addmap	Easy		c1m1_hotel				intro
-sm_addmap	Easy		c4m1_milltown_a			intro
-sm_addmap	Easy		c5m1_waterfront			intro
-sm_addmap	Easy		c6m1_riverbank			intro	normal
-sm_addmap	Easy		c8m1_apartment			intro
-sm_addmap	Easy		c10m1_caves				intro	normal
-sm_addmap	Easy		c11m1_greenhouse		intro
-sm_addmap	Easy		c13m1_alpinecreek		intro	normal
+sm_addmap	c1m1_hotel				intro
+sm_addmap	c4m1_milltown_a			intro
+sm_addmap	c5m1_waterfront			intro
+sm_addmap	c6m1_riverbank			intro	normal
+sm_addmap	c8m1_apartment			intro
+sm_addmap	c10m1_caves				intro	normal
+sm_addmap	c11m1_greenhouse		intro
+sm_addmap	c13m1_alpinecreek		intro	normal
 
-sm_addmap	Easy		c2m4_barns				normal
-sm_addmap	Easy		c3m2_swamp				normal
-sm_addmap	Easy		c3m3_shantytown			normal	finale
-sm_addmap	Easy		c5m2_park				normal
-sm_addmap	Easy		c6m2_bedlam				normal
-sm_addmap	Easy		c11m4_terminal			normal	finale
-sm_addmap	Easy		c12m2_traintunnel		normal
+sm_addmap	c2m4_barns				normal
+sm_addmap	c3m2_swamp				normal
+sm_addmap	c3m3_shantytown			normal	finale
+sm_addmap	c5m2_park				normal
+sm_addmap	c6m2_bedlam				normal
+sm_addmap	c11m4_terminal			normal	finale
+sm_addmap	c12m2_traintunnel		normal
 
-sm_addmap	Easy		c5m5_bridge				finale
+sm_addmap	c5m5_bridge				finale
 
 sm_tagrank	intro	0
 sm_tagrank	normal	1
