--- a/cfg/cmt/rivenspick.cfg
+++ b/cfg/cmt/rivenspick.cfg
@@ -1,9 +1,9 @@
-sm_addmap	RivensPick	c6m1_riverbank		map1
-sm_addmap	RivensPick	c1m2_streets		map2
-sm_addmap	RivensPick	c5m3_cemetery		map3
-sm_addmap	RivensPick	c4m2_sugarmill_a	map4
-sm_addmap	RivensPick	c10m3_ranchhouse	map5
-sm_addmap	RivensPick	c3m4_plantation		map6
+sm_addmap	c6m1_riverbank		map1
+sm_addmap	c1m2_streets		map2
+sm_addmap	c5m3_cemetery		map3
+sm_addmap	c4m2_sugarmill_a	map4
+sm_addmap	c10m3_ranchhouse	map5
+sm_addmap	c3m4_plantation		map6
 
 sm_tagrank	map1	0
 sm_tagrank	map2	1
