--- a/cfg/cmt/carniparishmix.cfg
+++ b/cfg/cmt/carniparishmix.cfg
@@ -1,13 +1,13 @@
-sm_addmap	CarniParishMix	c2m1_highway		map1
-sm_addmap	CarniParishMix	c5m1_waterfront		map1
-sm_addmap	CarniParishMix	c2m2_fairgroungs	map2
-sm_addmap	CarniParishMix	c5m2_park			map2
-sm_addmap	CarniParishMix	c2m3_coaster		map3
-sm_addmap	CarniParishMix	c5m3_cemetery		map3
-sm_addmap	CarniParishMix	c2m4_barns			map4
-sm_addmap	CarniParishMix	c5m4_quarter		map4
-sm_addmap	CarniParishMix	c2m5_concert		map5
-sm_addmap	CarniParishMix	c5m5_bridge			map5
+sm_addmap	c2m1_highway		map1
+sm_addmap	c5m1_waterfront		map1
+sm_addmap	c2m2_fairgroungs	map2
+sm_addmap	c5m2_park			map2
+sm_addmap	c2m3_coaster		map3
+sm_addmap	c5m3_cemetery		map3
+sm_addmap	c2m4_barns			map4
+sm_addmap	c5m4_quarter		map4
+sm_addmap	c2m5_concert		map5
+sm_addmap	c5m5_bridge			map5
 
 sm_tagrank	map1	0
 sm_tagrank	map2	1
