--- a/cfg/cmt/hard.cfg
+++ b/cfg/cmt/hard.cfg
@@ -1,24 +1,24 @@
-sm_addmap	Hard		c3m1_plankcountry		intro	normal
-sm_addmap	Hard		c9m1_alleys				intro	normal
+sm_addmap	c3m1_plankcountry		intro
+sm_addmap	c9m1_alleys				intro
 
-sm_addmap	Hard		c2m2_fairgrounds		normal
-sm_addmap	Hard		c2m3_coaster 			normal
-sm_addmap	Hard		c5m3_cemetery			normal
-sm_addmap	Hard		c4m4_milltown_b			normal
-sm_addmap	Hard		c10m4_mainstreet		normal
-sm_addmap	Hard		c11m2_offices			normal
-sm_addmap	Hard		c11m3_garage			normal
-sm_addmap	Hard		c12m4_barn				normal
-sm_addmap	Hard		c13m2_southpinestream	normal
-sm_addmap	Hard		c13m3_memorialbridge	normal
+sm_addmap	c2m2_fairgrounds		normal
+sm_addmap	c2m3_coaster 			normal
+sm_addmap	c5m3_cemetery			normal
+sm_addmap	c4m4_milltown_b			normal
+sm_addmap	c10m4_mainstreet		normal
+sm_addmap	c11m2_offices			normal
+sm_addmap	c11m3_garage			normal
+sm_addmap	c12m4_barn				normal
+sm_addmap	c13m2_southpinestream	normal
+sm_addmap	c13m3_memorialbridge	normal
 
-sm_addmap	Hard		c3m4_plantation			finale	normal
-sm_addmap	Hard		c6m3_port				finale	normal
-sm_addmap	Hard		c8m5_rooftop			finale	normal
-sm_addmap	Hard		c9m2_lots				finale	normal
-sm_addmap	Hard		c11m5_runway			finale	normal
-sm_addmap	Hard		c12m5_cornfield			finale	normal
-sm_addmap	Hard		c10m5_houseboat			finale	normal
+sm_addmap	c3m4_plantation			finale	normal
+sm_addmap	c6m3_port				finale	normal
+sm_addmap	c8m5_rooftop			finale	normal
+sm_addmap	c9m2_lots				finale	normal
+sm_addmap	c11m5_runway			finale	normal
+sm_addmap	c12m5_cornfield			finale	normal
+sm_addmap	c10m5_houseboat			finale	normal
 
 sm_tagrank	intro	0
 sm_tagrank	normal	1
