Added comments to cmt presets

--- a/cfg/cmt/canadasass.cfg
+++ b/cfg/cmt/canadasass.cfg
@@ -1,3 +1,5 @@
+//These maps were pulled out of CanadaRox's ass!
+
 sm_addmap	c2m1_highway 			0
 sm_addmap	c1m2_streets			1
 sm_addmap	c4m1_milltown_a			2
