--- a/cfg/cmt/easy.cfg
+++ b/cfg/cmt/easy.cfg
@@ -1,3 +1,8 @@
+//These maps are the easiest official maps in the game.
+//They were identified as being the easiest based on the average survivor distance
+//as a percentage of total map distance.
+//Data for this was taken from ProMod 3.2 matches logged by the L4D2-Logger.
+
 sm_addmap	c1m1_hotel				intro
 sm_addmap	c4m1_milltown_a			intro
 sm_addmap	c5m1_waterfront			intro
