--- a/cfg/cmt/generic.cfg
+++ b/cfg/cmt/generic.cfg
@@ -1,3 +1,5 @@
+//All of the official campaigns, divided only by intro|normal|finale
+
 sm_addmap	c1m1_hotel				intro
 sm_addmap	c1m2_streets			normal
 sm_addmap	c1m3_mall 				normal
