--- a/cfg/cmt/hard.cfg
+++ b/cfg/cmt/hard.cfg
@@ -1,3 +1,8 @@
+//These maps are the hardest official maps in the game.
+//They were identified as being the hardest based on the average survivor distance
+//as a percentage of total map distance.
+//Data for this was taken from ProMod 3.2 matches logged by the L4D2-Logger.
+
 sm_addmap	c3m1_plankcountry		intro
 sm_addmap	c9m1_alleys				intro
 
