--- a/cfg/cmt/hardcore.cfg
+++ b/cfg/cmt/hardcore.cfg
@@ -1,3 +1,8 @@
+//These maps represent the very worst average map distance in the game.
+//They were identified as being the very hardest based on the average survivor distance
+//as a percentage of total map distance.
+//Data for this was taken from ProMod 3.2 matches logged by the L4D2-Logger.
+
 sm_addmap	c12m5_cornfield	f
 sm_addmap	c2m3_coaster	o
 sm_addmap	c3m4_plantation	f
