--- a/cfg/cmt/medium.cfg
+++ b/cfg/cmt/medium.cfg
@@ -1,3 +1,8 @@
+//These official maps are harder than the maps in easy.cfg, but easier than the ones in hard.cfg
+//They were identified as being in this range based on the average survivor distance
+//as a percentage of total map distance.
+//Data for this was taken from ProMod 3.2 matches logged by the L4D2-Logger.
+
 sm_addmap	c2m1_highway 			intro
 sm_addmap	c7m1_docks				intro
 sm_addmap	c12m1_hilltop			intro
