--- a/cfg/cmt/rivenspick.cfg
+++ b/cfg/cmt/rivenspick.cfg
@@ -1,3 +1,6 @@
+//Riven once mentioned this is what he wanted to play with this plugin
+//so credits to him!
+
 sm_addmap	c6m1_riverbank		map1
 sm_addmap	c1m2_streets		map2
 sm_addmap	c5m3_cemetery		map3
