--- a/cfg/cmt/thesaccing.cfg
+++ b/cfg/cmt/thesaccing.cfg
@@ -1,3 +1,5 @@
+//part of epilimic's idea, now in plugin .cfg form!
+
 sm_addmap	c6m1_riverbank		pas1
 sm_addmap	c6m2_bedlam			pas2
 sm_addmap	c6m3_port			pas3
