--- a/cfg/cmt/carniparishmix.cfg
+++ b/cfg/cmt/carniparishmix.cfg
@@ -1,3 +1,5 @@
+//Everyone loves dark carnival and the parish, so why not mix it up a little?
+
 sm_addmap	c2m1_highway		map1
 sm_addmap	c5m1_waterfront		map1
 sm_addmap	c2m2_fairgroungs	map2
