--- a/cfg/cmt/sample.cfg
+++ b/cfg/cmt/sample.cfg
@@ -1,7 +1,55 @@
-//"any" is a reserved tag which will match any tag
-sm_addgroup	Sample:1	Generic:intro<any		//will go into Generic, explore all groups and retrieve maps tagged with "intro" as possible map1's
-sm_addmap	Sample:2	c6m2_bedlam				//will add c6m2_bedlam as a possible map2
-sm_addmap	Sample:2	c7m2_barge				//will add c7m2_barge as a possible map2
-sm_addgroup	Sample:3	CarniParishMix:1		//will go into CarniParishMix, and fetch maps tagged with "1" as possible map3's
-sm_addgroup	Sample:4	CarniParishMix:any		//will go into CarniParishMix, and fetch all maps as possible map4's
-sm_addgroup	Sample:5	Generic:finale<any		//will go into Generic, explore all groups and fetch all maps tagged with "finale" as possible map5's
+//Just a weird sample preset
+
+//maps with sewers or underground parts
+sm_addmap	c5m3_cemetery			underground	underground+p
+sm_addmap	c6m2_bedlam				underground	underground+p
+sm_addmap	c8m2_subway				underground	underground+p
+sm_addmap	c8m3_sewers				underground	underground+p
+sm_addmap	c10m1_caves				underground	underground+p
+sm_addmap	c10m2_drainage			underground	underground+p
+sm_addmap	c12m2_traintunnel		underground	underground+p
+
+//maps that begin with the letter p
+sm_addmap	c3m1_plankcountry		theletterp	underground+p
+sm_addmap	c3m4_plantation			theletterp	underground+p
+sm_addmap	c5m2_park				theletterp	underground+p
+sm_addmap	c6m3_port				theletterp	underground+p
+sm_addmap	c7m3_port				theletterp	underground+p
+
+//maps that have corn fields or sugar cane fields
+sm_addmap	c4m2_sugarmill_a		cornfield
+sm_addmap	c4m3_sugarmill_b		cornfield
+sm_addmap	c12m5_cornfield			cornfield
+
+//maps with a lot of water
+sm_addmap	c2m1_highway 			water
+sm_addmap	c3m2_swamp				water
+sm_addmap	c3m3_shantytown			water
+sm_addmap	c5m1_waterfront			water
+sm_addmap	c4m4_milltown_b			water
+sm_addmap	c4m5_milltown_escape	water
+sm_addmap	c5m5_bridge				water
+sm_addmap	c6m1_riverbank			water
+sm_addmap	c6m3_port				water
+sm_addmap	c7m1_docks				water
+sm_addmap	c7m2_barge				water
+sm_addmap	c7m3_port				water
+sm_addmap	c10m5_houseboat			water
+sm_addmap	c13m1_alpinecreek		water
+sm_addmap	c13m2_southpinestream	water
+sm_addmap	c13m3_memorialbridge	water
+sm_addmap	c13m4_cutthroatcreek	water
+
+//bridges
+sm_addmap	c5m5_bridge				bridge
+sm_addmap	c12m3_bridge			bridge
+sm_addmap	c13m3_memorialbridge	bridge
+
+
+sm_tagrank	underground+p	0
+sm_tagrank	underground		1
+sm_tagrank	water			2
+sm_tagrank	bridge			3
+sm_tagrank	theletterp		4
+sm_tagrank	cornfield		5
+
