Added recent gfc cvars to h2h

--- a/cfg/h2h/headtohead.cfg
+++ b/cfg/h2h/headtohead.cfg
@@ -53,6 +53,8 @@ confogl_addcvar gfc_smoker_duration 0
 confogl_addcvar gfc_charger_duration 2.0
 confogl_addcvar gfc_common_zc_flags 0
 confogl_addcvar gfc_spit_zc_flags 6
+confogl_addcvar gfc_godframe_glows 1
+confogl_addcvar gfc_ff_min_time 0.333
 
 // [l4d2_hittable_control.smx]
 confogl_addcvar hc_bridge_car_damage 25.0
