--- a/cfg/h2h/confogl_plugins.cfg
+++ b/cfg/h2h/confogl_plugins.cfg
@@ -25,7 +25,7 @@ sm plugins load optional/blocktrolls.smx
 sm plugins load optional/bossspawningfix.smx
 sm plugins load optional/botpopstop.smx
 sm plugins load optional/coinflip.smx
-sm plugins load optional/finalefix.smx
+sm plugins load optional/finalefix.smxs
 sm plugins load optional/infected_flow_warp.smx
 sm plugins load optional/l4d_bash_kills.smx
 sm plugins load optional/l4d_boss_percent.smx
@@ -47,11 +47,10 @@ sm plugins load optional/l4d2_hittable_control.smx
 sm plugins load optional/l4d2_nobhaps.smx
 sm plugins load optional/l4d2_noelevatorspit.smx
 sm plugins load optional/l4d2_nospitterduringtank.smx
-sm plugins load optional/l4d2_scoremod.smx
+//sm plugins load optional/l4d2_scoremod.smx
 sm plugins load optional/l4d2_setscores.smx
 sm plugins load optional/l4d2_si_ffblock.smx
 sm plugins load optional/l4d2_spec_stays_spec.smx
-sm plugins load optional/l4d2_startercommon.smx
 sm plugins load optional/l4d2_uncommon_blocker.smx
 sm plugins load optional/l4d2_unsilent_jockey.smx
 sm plugins load optional/l4d2_weaponrules.smx
