Some updates after recent h2h test

--- a/cfg/h2h/confogl_plugins.cfg
+++ b/cfg/h2h/confogl_plugins.cfg
@@ -67,11 +67,13 @@ sm plugins load optional/aitankgank.smx
 sm plugins load optional/boomer_mobs.smx
 sm plugins load optional/damage_bonus.smx
 sm plugins load optional/l4d_extended_tank_control.smx
-sm plugins load optional/l4d2_standardised_spawns.smx
+//sm plugins load optional/l4d2_standardised_spawns.smx
 sm plugins load optional/melee_control.smx
 
 // Confogl
-sm plugins load l4dready.smx
+sm plugins load readyup.smx
+sm plugins load pause.smx
+sm plugins load playermanagement.smx
 sm plugins load confoglcompmod.smx
 sm plugins load match_vote.smx
 
