Added sm_mapsetlock to the end of all presets

--- a/cfg/cmt/hardcore.cfg
+++ b/cfg/cmt/hardcore.cfg
@@ -1,4 +1,4 @@
-//These maps represent the very worst average map distance in the game.
+//These maps represent the very worst chance of making it far into the map in the game.
 //They were identified as being the very hardest based on the average survivor distance
 //as a percentage of total map distance.
 //Data for this was taken from ProMod 3.2 matches logged by the L4D2-Logger.
@@ -14,3 +14,5 @@ sm_tagrank	map2	o
 sm_tagrank	map3	f
 sm_tagrank	map4	o
 sm_tagrank	map5	f
+
+sm_mapsetlock
