--- a/cfg/cmt/thesaccing.cfg
+++ b/cfg/cmt/thesaccing.cfg
@@ -2,7 +2,7 @@
 
 sm_addmap	c6m1_riverbank		pas1
 sm_addmap	c6m2_bedlam			pas2
-sm_addmap	c6m3_port			pas3
+sm_addmap	c6m3_port			pas3	//ignored by tagranks
 sm_addmap	c7m1_docks			sac1
 sm_addmap	c7m2_barge			sac2
 sm_addmap	c7m3_port			sac3
@@ -12,3 +12,5 @@ sm_tagrank	pas2	1
 sm_tagrank	sac1	2
 sm_tagrank	sac2	3
 sm_tagrank	sac3	4
+
+sm_mapsetlock
