Updated presets with cvar settings

--- a/cfg/cmt/generic.cfg
+++ b/cfg/cmt/generic.cfg
@@ -63,3 +63,8 @@ sm_tagrank	normal	3
 sm_tagrank	finale	4
 
 sm_mapsetlock
+
+sm_cvar cmt_poolsize 9		//ie no limit
+sm_cvar cmt_minimum_poolsize 3
+sm_cvar cmt_veto_count 2
+sm_cvar cmt_allow_void 1
