--- a/cfg/cmt/sample.cfg
+++ b/cfg/cmt/sample.cfg
@@ -54,3 +54,8 @@ sm_tagrank	theletterp		4
 sm_tagrank	cornfield		5
 
 sm_mapsetlock
+
+sm_cvar cmt_poolsize 1000		//ie no limit
+sm_cvar cmt_minimum_poolsize 1
+sm_cvar cmt_veto_count 3
+sm_cvar cmt_allow_void 1
