--- a/cfg/cmt/dlcmashup.cfg
+++ b/cfg/cmt/dlcmashup.cfg
@@ -1,16 +1,16 @@
 //Credits go to Jacob
 
-sm_addmap	c6m1_riverbank		normal
-sm_addmap	c6m2_bedlam		normal
-sm_addmap	c7m1_docks		normal
-sm_addmap	c7m2_barge		normal
-sm_addmap	c9m1_alleys		normal
-sm_addmap	c9m2_lots		normal
-
-sm_tagrank	normal	0
-sm_tagrank	normal	1
-sm_tagrank	normal	2
-sm_tagrank	normal	3
+sm_addmap       c6m1_riverbank          normal pass
+sm_addmap       c6m2_bedlam             normal pass
+sm_addmap       c7m1_docks              normal sac
+sm_addmap       c7m2_barge              normal sac
+sm_addmap       c9m1_alleys             normal cc
+sm_addmap       c9m2_lots               normal cc
+ 
+sm_tagrank      normal  0
+sm_tagrank      pass    1
+sm_tagrank      sac     2
+sm_tagrank      cc      3
 
 sm_cvar cmt_poolsize 1
 sm_cvar cmt_veto_count 0
